--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <a href="foxy.html">Foxeh.</a><br>
 <a href="meowdos.html">MEOWDOS!</a><br>
 <a href="meowdos2.html">MEOWDOS V2!!!</a><br>
+<a href="HackDOS/index.html">HackDOS - a Simple game...</a><br>
 <a href="mitchel.html">Mitchel</a></div>
 </body>
