--- a/hackdos/index.html
+++ b/hackdos/index.html
@@ -16,7 +16,9 @@ color: lightGreen;
 <body onkeydown="typeSomething(event)" bgcolor="000000">
 <div id="console">
 <p>Matt DOS v2.31.<br>
-*** YOUR PC IS HACKED ***</p>
+*** YOUR PC IS HACKED ***<br>
+TYPE ANTIHACK FOR DELETE 1 VIRUS.</p>
+
 <p id="out"></div>
 <p id="test"></p>
 </div>
