--- a/FlappyText.html
+++ b/FlappyText.html
@@ -22,6 +22,6 @@ color:green;
 <div>You have just 1 chance to win</div>
 <div id="status"></div>
 <div id="gameover"></div>
-<div><button>Flap</button><button>Do not flap</button></div>
+<div><button onClick="Flap">Flap</button><button onClick="doNoFlap()">Do not flap</button></div>
 </body>
 </html>
