--- a/flappytext.html
+++ b/flappytext.html
@@ -14,7 +14,7 @@
     <div id="gameover"></div>
     <div>
       <button onClick="Flap()">Flap</button>
-      <button onClick="doNoFlap()">Do not flap</button>
+      <button onClick="DoNoFlap()">Do not flap</button>
     </div>
   </body>
 </html>
