--- a/InfiniteProgram.html
+++ b/InfiniteProgram.html
@@ -1,3 +1,17 @@
 <html>
-
+  <head>
+    <title>Infinite Program</title>
+    <script src="InfProgAI.js"></script>
+    <style>
+      div {
+        color:light-green;
+        font-family:Monaco,monospace;
+      }
+    </style>
+  </head>
+  
+  <body bgcolor="000000">
+    <p><button onClick="startAI()">Run Program</button><button onClick="stopAI()">End Program</button></p>
+    <div id="console"></div>
+  </body>
 </html>
