--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <a href="meowdos.html">MEOWDOS!</a><br>
 <a href="meowdos2.html">MEOWDOS V2!!!</a><br>
 <a href="hackdos/index.html">HackDOS - a Simple game...</a><br>
-<a href="mitchel.html">Mitchel</a></div>
+<a href="mitchel.html">Mitchel</a>
+  <a href="flappytext.html">Flappy Text</a></div>
+
 </body>
