--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <a href="meowdos.html">MEOWDOS!</a><br>
 <a href="meowdos2.html">MEOWDOS V2!!!</a><br>
 <a href="hackdos/index.html">HackDOS - a Simple game...</a><br>
-<a href="mitchel.html">Mitchel</a>
-  <a href="flappytext.html">Flappy Text</a></div>
+<a href="mitchel.html">Mitchel</a><br>
+  <a href="flappytext.html">Flappy Text</a><br>
+  <a href="404sim.html">404 : The game</a><br>
+  <a href="Infinite.html">Infinite DOS Program</a></div>
 
 </body>
