--- a/ascii.html
+++ b/ascii.html
@@ -6,6 +6,6 @@
 <body>
 <h1>ASCII</h1>
 <p><h1>G E N E R A T E</h1></p>
-<div id="AscCanvas"></div>
+<div id="AscCanvas" style="font-family: \"Lucida Console\",monospace"></div>
 </body>
 </html>
